a little bit change

--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
-Hello World.
 <!DOCTYPE html>
 <html lang= "en">
 <head>
   <meta charset= "utf-8">
-  <title>The Title.</title>
+  <title>acai的个人网站</title>
 </head>
 <body>
-  <h1 color="blue" >欢迎来到Acai的空间</h1>
-  
+  <p style="font-size:25px;">欢迎来到<br>Acai<br>的空间</p>
+  <h2 align="center" >Acai的自我介绍</h2>
+  <p style="font-family:华文楷体;color:blue;">我叫蔡依珊。在北京市八一学校国际部就读高二。是一个简简单单，不会化妆，胖胖的女生。</p>
+  <img src="/" height="5cm" width="8cm">
+  <!--这里不会加src，还不会确定高度和宽度-->
+  <hr />
+  <!--想加的是水平线，不知道加对没有-->
+  <h2 align="center" >小小动力——我的爱好</h2>
+  <div>
+    <h3 style="color:blue;">画画</h3>
+    <h3 style="color:blue;">弹琵琶</h3>
+    <h3 style="color:blue;">橡皮章</h3>
+  </div>
+</body>
+</html>
