add information about my hobby

--- a/index.html
+++ b/index.html
@@ -5,18 +5,24 @@
   <title>acai的个人网站</title>
 </head>
 <body>
-  <p style="font-size:25px;">欢迎来到<br>Acai<br>的空间</p>
+  <h1 style="font-size:25px;">欢迎来到<br>Acai<br>的空间</h1>
   <h2 align="center" >Acai的自我介绍</h2>
-  <p style="font-family:华文楷体;color:blue;">我叫蔡依珊。在北京市八一学校国际部就读高二。是一个简简单单，不会化妆，胖胖的女生。</p>
-  <img src="/" height="5cm" width="8cm">
-  <!--这里不会加src，还不会确定高度和宽度-->
+  <p style="font-family:华文楷体;">我叫蔡依珊。在北京市八一学校国际部就读高二。是一个简简单单，不会化妆，胖胖的女生。
+    搭这个个人网站的目的可能就是让更多的人认识和了解我吧。我会在这里分享我自己的成长经历和各种学习经验。</p>
+  <img src="/" height="25px" width="15px">
+  <!--src要从upload上面弄，高度和宽度要用px或者pixel-->
   <hr />
-  <!--想加的是水平线，不知道加对没有-->
   <h2 align="center" >小小动力——我的爱好</h2>
-  <div>
-    <h3 style="color:blue;">画画</h3>
-    <h3 style="color:blue;">弹琵琶</h3>
-    <h3 style="color:blue;">橡皮章</h3>
-  </div>
+    <h3 style="color:Dodgerblue;">画画</h3>
+    <p> Acai在小时候就开始学画画了。没学过简笔画，没学过漫画，一开始就学的素描。素描的深浅叫调（diao四声）子。
+      我记得小学一年级那会跟着哥哥姐姐一起画正方体，画完老师就说调子画“死”了，还给我吓一跳，意思是线条画的太密，没有留出透气的空间，显得很沉闷。后来就慢慢学，
+      学的还算快吧（沾沾自喜）四年级就学完了石膏还有人像，还考了级，但现在回头看也就几张还算满意，其他的都双眼无神:)
+      <br>后来就学的水粉，学了两年，画风景还差点火候，但还是能表达自己的心情</p>
+    <img src="/" alt="我的-老早之前的-画" height="25px" width="15px">
+    <h3 style="color:Dodgerblue;">弹琵琶</h3>
+    <p>是三年级开始学的琵琶。其实小时候喜欢的是钢琴，但是因为太小了人家老师说学不了，就没学成。据我妈说，说我看电视上人家大姐姐穿旗袍弹琵琶好看所以才想学琴。
+      现在想来都是什么奇葩理由。前前后后大概换了三个老师。换了第二个老师后，就去了我们初中的乐团，感到很幸运在乐团里呆了一年多的时间。</p>
+    <h3 style="color:Dodgerblue;">橡皮章</h3>
+  <h2 align="center" >
 </body>
 </html>
