add information about my hobby

--- a/index.html
+++ b/index.html
@@ -5,18 +5,74 @@
   <title>acai的个人网站</title>
 </head>
 <body>
-  <p style="font-size:25px;">欢迎来到<br>Acai<br>的空间</p>
-  <h2 align="center" >Acai的自我介绍</h2>
-  <p style="font-family:华文楷体;color:blue;">我叫蔡依珊。在北京市八一学校国际部就读高二。是一个简简单单，不会化妆，胖胖的女生。</p>
-  <img src="/" height="5cm" width="8cm">
-  <!--这里不会加src，还不会确定高度和宽度-->
+  <h1 style="font-size:28px;">欢迎来到<br>Acai<br>的空间</h1>
+  <h2 align="center" style="color:Darkblue;">Acai的自我介绍</h2>
+  <p style="font-family:华文楷体;">我叫蔡依珊。在北京市八一学校国际部就读高二。是一个简简单单，不会化妆，胖胖的女生。
+    生日是万圣节前夜的那天。天蝎女。不信妖魔鬼怪，也无宗教信仰。牙不太好,但是爱吃橡皮糖和棒棒糖!
+    搭这个网站的目的可能就是让更多的人认识和了解我吧。我会在这里分享我自己的成长经历和各种学习经验。
+  </p>
+  <img src="照片\自拍.jpg" height="320" width="425">
+  <!--src要从upload上面弄，高度和宽度要用px或者pixel-->
   <hr />
-  <!--想加的是水平线，不知道加对没有-->
-  <h2 align="center" >小小动力——我的爱好</h2>
-  <div>
-    <h3 style="color:blue;">画画</h3>
-    <h3 style="color:blue;">弹琵琶</h3>
-    <h3 style="color:blue;">橡皮章</h3>
-  </div>
-</body>
+  <h2 align="center" style="color:Darkblue;">小小动力——我的爱好</h2>
+    <h3 style="color:Dodgerblue;">画画</h3>
+    <p> Acai在小时候就开始学画画了。没学过简笔画，没学过漫画，一开始就学的素描，因为素描是基础。素描的深浅叫调（diao四声）子。
+      我记得小学一年级那会跟着哥哥姐姐一起画正方体，画完老师就说调子画“死”了，还给我吓一跳，意思是线条画的太密，没有留出透气的空间，显得很沉闷。后来就慢慢学，
+      学的还算快吧（沾沾自喜）四年级就学完了石膏还有人像，考了九级。画了一堆老头子和一个老太太，老太太画的最好（沉思）。
+      <br>后来就学的水粉，学了两年，脱离黑白灰的苦海。最喜欢画风景了，能把景色用自己的理解和感受表现出来，不同心情下也有不同的作品。
+      <div>
+        小学毕业那会，就用美术特长生考去了十九中，顺理成章的进了美术社团。
+        在美术社团学的还是素描和水粉，也画了墙绘，尝试了一点点水彩。水彩以失败而告终。画井盖和画墙都是全新的尝试，同样的磨人却又有趣。画一块墙从清理墙面到留下自己的大名要花一天的时间。
+        清理墙面，铺底色，画主体，画整体，扣细节，最后签名，完成！画完了以后顶顶骄傲和自豪。高一的时候也回去和同学一起画墙来着！主题是中国戏剧，画了一个大美女。
+        在初中还学了电脑美术，画了一个皮影制作人和皮影对话的场景的作品
+      </div>
+    </p>
+    <img src="照片\橙子？.jpg" alt="画井盖" width="425" height="320"><br>
+    <img src="照片\橙子合照.jpg" alt="和同学的合影" width="320" height="425"><br>
+    <img src="照片\树？.jpg" alt="画井盖" width="425" height="320"><br>
+    <img src="照片\被偷拍.jpg" alt="画井盖" height="180" width="320">
+    <h3 style="color:Dodgerblue;">弹琵琶</h3>
+    <p>是二年级开始学的琵琶。据我妈说，说我看电视上人家大姐姐穿旗袍弹琵琶好看所以才想学琴。现在这是什么神奇的理由。
+      前前后后有三个琵琶老师。上初中后，就去了我们初中的乐团。在乐团的一年多的时间是我最难忘的经之一。
+      <div>其实初一的时候就找过乐团的老师了，但那会不想去。初二的时候还是进去了，最开始很陌生。两个高中的学姐，两个同年级的女生，还有两个初一的学妹。
+      尴尬的点就在于，两个人一个谱架台，我正好单着了，其实还好。在乐团不同于去上小班课，老师不会特意的照顾你。就在这个环境下学会了调弦，换弦。那会算是成长了很多。
+      有点压力是在于训练的老师吧，他就乐意坐在单着的人旁边。总指挥时不时来一下，带着浓郁的古龙香水的味道。
+      初二半个学期的合奏适应期就在古龙香水和槟榔味儿中度过。下学期的时候，因为同届的有个女生回老家了，我终于可以换到二谱台了！</div>
+      <br>合奏的经历，说好玩也好玩，说无趣倒是也无趣。合奏总比一个人独奏强，团体总是能掩盖个人的小缺点。但是当整体都很好的时候，个人的缺点又十分突兀了。还记得那会练
+      《大宅门》，有一段琵琶声部的单独的solo，我老怕弹错，就不敢大声弹。声音一小了就会被欧哥（声部长）说，让我大点声，那好吧，那就大点声。
+      在初二的时候参加了两次演出。（喜欢我们的演出服，青花瓷样式的，可惜我一毕业就换新的了。）第一次去非常异常的紧张。抱着琵琶的手就跟要去考级似的，不停的出汗。坐好后，
+      等到指挥给指令，才不那么紧张。后来的两次演出因为第一次的经验就很放松了，更加享受在台上演奏的感觉。
+    </p>
+    <img src="照片\二十届艺术展演.jpg" alt="演出照" height="345" width="518"><br>
+    <img src="照片\二十届艺术展演 近.jpg" alt="演出照" height="345" width="518"><br>
+    <img src="照片\琵琶声部.jpg" alt="弹拨声部" height="204" width="306"><br>
+    <img src="照片\憨憨合照.jpg" alt="我和同学的合影" height="288" width="216"><br>
+    <img src="照片\三十九中交流演出.jpg" alt="与青岛三十九中交流演出" height="288" width="384"><br>
+    <img src="照片\三十九中交流合照.jpg" alt="与青岛三十九中交流演出" height="280" width="400">
+    <h3 style="color:Dodgerblue;">橡皮章</h3>
+    <p>
+      刻橡皮章是从初一开始的。初中设了有选修课，我就迷迷糊糊选了一点都不了解的橡皮章。第一个章子是熊猫，应该是史上最丑，没有之一，看起来毫无天赋，但还是能看得过去。
+      回家后就买了一个新手套装（警告：别买），一般般难用。跟着老师刻了一整年，自己初一闲的琢磨琢磨，算是小有成就。有的时候同学还让我帮他们刻呢。初二就是自己的霍霍时光。
+      上课听听讲，下课刻刻章，满世界都是橡皮渣滓。初三的时候因为中考，放下了一年。等一考完，立马就捡起来了。
+      <div>图案有很多，可以刻喜爱的动漫人物，或者就是简单的猫猫狗狗或者植物，还能当做装饰。<br>
+        <img src="照片\傻猫.jpg" alt="傻猫" height="416" width="312"><br>
+        <img src="照片\傻狗.jpg" alt="哈士奇，据说是我的自画像" height="416" width="312"><br>
+        <img src="照片\安东尼的兔子.jpg" alt="安东尼的兔子" height="312" width="416"><br>
+        <img src="照片\黑子的篮球.jpg" alt="黑子的篮球" height="416" width="312"><br>
+        <img src="照片\saber.jpg" alt="我的章" height="416" width="312"><br>
+      比起图案，更喜欢刻字。可能是因为自己的字太丑，所以靠刻出来的字补补。喜欢刻字的感觉，很细致。<br>
+      <img src="照片\福到了.jpg" alt="福" height="312" width="312"><br>
+      <img src="照片\平安喜乐.jpg" alt="平安喜乐" height="416" width="312"><br>
+      <img src="照片\镇魂.jpg" alt="字" height="312" width="416"><br>
+      <img src="照片\bjt.jpg" alt="字" height="312" width="416"><br>
+      <img src="照片\人狠.jpg" alt="字" height="312" width="312">
+      </div>
+      <br>刻橡皮章算是我的最放松的方式。可以放空自己的脑袋，累的时候什么也不想，想不明白事情的时候也可以什么都想。四年攒下来已经有三四盒章子了。大部分的章子刻完以后会印到卡纸上当做明信片或者书签。
+      还有的会当做贺卡送给老师和同学。<br>
+      <img src="照片\圣诞节.jpg" alt="贺卡" height="219" width="288">
+    </p>
+  <hr />
+  <h2 align="center" style="color:Darkblue;">记录生活——不到入门级摄影:)</h2>
+  </h2>
+
 </html>
