--- a/index.html
+++ b/index.html
@@ -19,18 +19,26 @@
     <p> Acai在小时候就开始学画画了。没学过简笔画，没学过漫画，一开始就学的素描，因为素描是基础。素描的深浅叫调（diao四声）子。
       我记得小学一年级那会跟着哥哥姐姐一起画正方体，画完老师就说调子画“死”了，还给我吓一跳，意思是线条画的太密，没有留出透气的空间，显得很沉闷。后来就慢慢学，
       学的还算快吧（沾沾自喜）四年级就学完了石膏还有人像，考了九级。画了一堆老头子和一个老太太，老太太画的最好（沉思）。
-      <br>后来就学的水粉，学了两年，脱离黑白灰的苦海。最喜欢画风景了，能把景色用自己的理解和感受表现出来，不同心情下也有不同的作品。
+      <br>后来就学的水粉，学了两年，脱离黑白灰的苦海。最喜欢画风景了，能把景色用自己的理解和感受表现出来，不同心情下也有不同的作品。<br>
+      <img src="照片\水粉.jpg" alt="水粉" height="240" width="320"><br>
+      <img src="照片\水粉和我？.jpg" alt="水粉和我？" height="180" width="320">
       <div>
         小学毕业那会，就用美术特长生考去了十九中，顺理成章的进了美术社团。
         在美术社团学的还是素描和水粉，也画了墙绘，尝试了一点点水彩。水彩以失败而告终。画井盖和画墙都是全新的尝试，同样的磨人却又有趣。画一块墙从清理墙面到留下自己的大名要花一天的时间。
         清理墙面，铺底色，画主体，画整体，扣细节，最后签名，完成！画完了以后顶顶骄傲和自豪。高一的时候也回去和同学一起画墙来着！主题是中国戏剧，画了一个大美女。
-        在初中还学了电脑美术，画了一个皮影制作人和皮影对话的场景的作品
       </div>
+      <img src="照片\橙子？.jpg" alt="画井盖" width="425" height="320"><br>
+      <img src="照片\橙子合照.jpg" alt="和同学的合影" width="320" height="425"><br>
+      <img src="照片\树？.jpg" alt="画井盖" width="425" height="320"><br>
+      <img src="照片\被偷拍.jpg" alt="画井盖" height="180" width="320"><br>
+      <img src="照片\辛普森墙绘.jpg" alt="辛普森墙绘" width="425" height="320"><br>
+      <img src="照片\戏剧墙绘.jpg" alt="戏剧墙绘" width="425" height="425"><br>
+      学了电脑美术，画了一个皮影制作人和皮影对话的场景的作品，还有一些简单的练习。<br>
+      <img src="照片\电脑绘画.jpg" alt="电脑绘画" width="425" height="320"><br>
+      还尝试了一点点国画，虽然不是很擅长，算是个想继续的体验。<br>
+      <img src="照片\国画.jpg" alt="白描" width="320" height="425">
     </p>
-    <img src="照片\橙子？.jpg" alt="画井盖" width="425" height="320"><br>
-    <img src="照片\橙子合照.jpg" alt="和同学的合影" width="320" height="425"><br>
-    <img src="照片\树？.jpg" alt="画井盖" width="425" height="320"><br>
-    <img src="照片\被偷拍.jpg" alt="画井盖" height="180" width="320">
+
     <h3 style="color:Dodgerblue;">弹琵琶</h3>
     <p>是二年级开始学的琵琶。据我妈说，说我看电视上人家大姐姐穿旗袍弹琵琶好看所以才想学琴。现在这是什么神奇的理由。
       前前后后有三个琵琶老师。上初中后，就去了我们初中的乐团。在乐团的一年多的时间是我最难忘的经之一。
@@ -41,20 +49,23 @@
       <br>合奏的经历，说好玩也好玩，说无趣倒是也无趣。合奏总比一个人独奏强，团体总是能掩盖个人的小缺点。但是当整体都很好的时候，个人的缺点又十分突兀了。还记得那会练
       《大宅门》，有一段琵琶声部的单独的solo，我老怕弹错，就不敢大声弹。声音一小了就会被欧哥（声部长）说，让我大点声，那好吧，那就大点声。
       在初二的时候参加了两次演出。（喜欢我们的演出服，青花瓷样式的，可惜我一毕业就换新的了。）第一次去非常异常的紧张。抱着琵琶的手就跟要去考级似的，不停的出汗。坐好后，
-      等到指挥给指令，才不那么紧张。后来的两次演出因为第一次的经验就很放松了，更加享受在台上演奏的感觉。
+      等到指挥给指令，才不那么紧张。后来的两次演出因为第一次的经验就很放松了，更加享受在台上演奏的感觉。<br>
+     <img src="照片\二十届艺术展演.jpg" alt="演出照" height="345" width="518"><br>
+     <img src="照片\二十届艺术展演 近.jpg" alt="演出照" height="345" width="518"><br>
+     <img src="照片\琵琶声部2.jpg" alt="弹拨声部" height="345" width="518"><br>
+     <img src="照片\琵琶声部.jpg" alt="弹拨声部" height="272" width="412"><br>
+     <img src="照片\憨憨合照.jpg" alt="我和同学的合影" height="432" width="324"><br>
+     <img src="照片\三十九中交流演出.jpg" alt="与青岛三十九中交流演出" height="288" width="384"><br>
+     <img src="照片\三十九中交流合照.jpg" alt="与青岛三十九中交流演出" height="280" width="400"><br>
+     <a href="照片\卢沟晓月-大宅门写意.wmv">青岛演出视频</a>
     </p>
-    <img src="照片\二十届艺术展演.jpg" alt="演出照" height="345" width="518"><br>
-    <img src="照片\二十届艺术展演 近.jpg" alt="演出照" height="345" width="518"><br>
-    <img src="照片\琵琶声部.jpg" alt="弹拨声部" height="204" width="306"><br>
-    <img src="照片\憨憨合照.jpg" alt="我和同学的合影" height="288" width="216"><br>
-    <img src="照片\三十九中交流演出.jpg" alt="与青岛三十九中交流演出" height="288" width="384"><br>
-    <img src="照片\三十九中交流合照.jpg" alt="与青岛三十九中交流演出" height="280" width="400">
     <h3 style="color:Dodgerblue;">橡皮章</h3>
     <p>
       刻橡皮章是从初一开始的。初中设了有选修课，我就迷迷糊糊选了一点都不了解的橡皮章。第一个章子是熊猫，应该是史上最丑，没有之一，看起来毫无天赋，但还是能看得过去。
       回家后就买了一个新手套装（警告：别买），一般般难用。跟着老师刻了一整年，自己初一闲的琢磨琢磨，算是小有成就。有的时候同学还让我帮他们刻呢。初二就是自己的霍霍时光。
       上课听听讲，下课刻刻章，满世界都是橡皮渣滓。初三的时候因为中考，放下了一年。等一考完，立马就捡起来了。
       <div>图案有很多，可以刻喜爱的动漫人物，或者就是简单的猫猫狗狗或者植物，还能当做装饰。<br>
+        <img src="照片\人生中的第一个章子.jpg" alt="人生中的第一个章子" height="416" width="312"><br>
         <img src="照片\傻猫.jpg" alt="傻猫" height="416" width="312"><br>
         <img src="照片\傻狗.jpg" alt="哈士奇，据说是我的自画像" height="416" width="312"><br>
         <img src="照片\安东尼的兔子.jpg" alt="安东尼的兔子" height="312" width="416"><br>
@@ -73,5 +84,76 @@
     </p>
   <hr />
   <h2 align="center" style="color:Darkblue;">记录生活——不到入门级摄影:)</h2>
+  <p>真的算一个不到入门级的小白，平常看到好看的景色就喜欢拿着手机或者相机拍下来.</p>
+  <h3 style="color:Dodgerblue;">-云-</h3>
+    <img src="照片\云1.jpg" height="312" width="312"><br>
+    <img src="照片\云2.jpg" height="312" width="312"><br>
+    <img src="照片\云3.jpg" height="211" width="375"><br>
+    <img src="照片\云4.jpg" height="312" width="312"><br>
+    <img src="照片\云5.jpg" height="312" width="416"><br>
+    <img src="照片\云6.jpg" height="306" width="512"><br>
+    <img src="照片\云7.jpg" height="312" width="416"><br>
+    <img src="照片\云8.jpg" height="312" width="416"><br>
+    <img src="照片\云9.jpg" height="312" width="416"><br>
+    <img src="照片\云10.jpg" height="312" width="312"><br>
+    <img src="照片\云11.jpg" height="312" width="416"><br>
+    <img src="照片\云12.jpg" height="312" width="416"><br>
+  <h3 style="color:Dodgerblue;">-花-</h3>
+    <img src="照片\花1.jpg" height="416" width="312"><br>
+    <img src="照片\花2.jpg" height="312" width="416"><br>
+    <img src="照片\花3.jpg" height="416" width="312"><br>
+    <img src="照片\花4.jpg" height="312" width="312"><br>
+    <img src="照片\花5.jpg" height="312" width="416"><br>
+    <img src="照片\花7.jpg" height="312" width="416"><br>
+    <img src="照片\花8.jpg" height="312" width="416"><br>
+    <img src="照片\花6.jpg" height="312" width="416"><br>
+  <h3 style="color:Dodgerblue;">-足球-</h3>
+    <img src="照片\足1.jpg" height="312" width="416"><br>
+    <img src="照片\足2.jpg" height="312" width="416"><br>
+    <img src="照片\足3.jpg" height="312" width="416"><br>
+    <img src="照片\足4.jpg" height="312" width="416"><br>
+    <img src="照片\足5.jpg" height="312" width="416"><br>
+    <img src="照片\足6.jpg" height="312" width="312"><br>
+  <h3 style="color:Dodgerblue;">-故宫-</h3>
+    <img src="照片\故宫1.jpg" height="312" width="312"><br>
+    <img src="照片\故宫2.jpg" height="416" width="312"><br>
+    <img src="照片\故宫3.jpg" height="312" width="416"><br>
+    <img src="照片\故宫5.jpg" height="312" width="312"><br>
+    <img src="照片\故宫4.jpg" height="312" width="312"><br>
+    <img src="照片\故宫6.jpg" height="416" width="312"><br>
+  <h3 style="color:Dodgerblue;">-川渝之旅-</h3>
+    <img src="照片\成1.jpg" height="312" width="312"><br>
+    <img src="照片\成2.jpg" height="312" width="312"><br>
+    <img src="照片\成3.jpg" height="416" width="312"><br>
+    <img src="照片\成4.jpg" height="312" width="312"><br>
+    <img src="照片\成5.jpg" height="312" width="416"><br>
+    <img src="照片\成6.jpg" height="312" width="416"><br>
+    <img src="照片\成7.jpg" height="312" width="416"><br>
+  <h3 style="color:Dodgerblue;">-sat之旅-</h3>
+    <img src="照片\香港1.jpg" height="312" width="416"><br>
+    <img src="照片\香港2.jpg" height="312" width="416"><br>
+    <img src="照片\香港3.jpg" height="312" width="416"><br>
+    <img src="照片\香港4.jpg" height="312" width="416"><br>
+    <img src="照片\香港5.jpg" height="312" width="416"><br>
+    <img src="照片\香港6.jpg" height="312" width="416"><br>
+    <img src="照片\香港7.jpg" height="312" width="312"><br>
+    <img src="照片\香港8.jpg" height="312" width="416"><br>
+    <img src="照片\香港9.jpg" height="416" width="312"><br>
+  <h3 style="color:Dodgerblue;">-杂-</h3>
+    <img src="照片\杂1.jpg" height="312" width="416"><br>
+    <img src="照片\杂2.jpg" height="312" width="312"><br>
+    <img src="照片\杂3.jpg" height="416" width="312"><br>
+    <img src="照片\杂4.jpg" height="312" width="416"><br>
+    <img src="照片\杂5.jpg" height="416" width="312"><br>
+    <img src="照片\杂6.jpg" height="312" width="416"><br>
+    <img src="照片\杂7.jpg" height="312" width="416"><br>
+    <img src="照片\杂8.jpg" height="312" width="416"><br>
+    <img src="照片\杂9.jpg" height="312" width="312"><br>
+    <img src="照片\杂10.jpg" height="312" width="416"><br>
+    <img src="照片\杂11.jpg" height="312" width="312"><br>
+    <img src="照片\杂12.jpg" height="312" width="416"><br>
+    <img src="照片\杂13.jpg" height="312" width="416"><br>
+    <img src="照片\杂15.jpg" height="312" width="312"><br>
+    <img src="照片\杂16.jpg" height="312" width="312"><br>
   </h2>
 </html>
