--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   <p style="font-family:华文楷体;">我叫蔡依珊。在北京市八一学校国际部就读高二。是一个简简单单，不会化妆，胖胖的女生。
     生日是万圣节前夜的那天。天蝎女。不信妖魔鬼怪，也无宗教信仰。牙不太好,但是爱吃橡皮糖和棒棒糖!
     搭这个网站的目的可能就是让更多的人认识和了解我吧。我会在这里分享我自己的成长经历和各种学习经验。
+    <br>照片，不，放错了
+    <br><img src="照片\照片.jpg" height="320" width="320">
+    <br>照骗(微笑)
+    <br><img src="照片\自拍.jpg" height="320" width="425">
   </p>
-  <img src="照片\自拍.jpg" height="320" width="425">
   <!--src要从upload上面弄，高度和宽度要用px或者pixel-->
   <hr />
   <h2 align="center" style="color:Darkblue;">小小动力——我的爱好</h2>
@@ -86,6 +89,7 @@
   <h2 align="center" style="color:Darkblue;">记录生活——不到入门级摄影:)</h2>
   <p>真的算一个不到入门级的小白，平常看到好看的景色就喜欢拿着手机或者相机拍下来.</p>
   <h3 style="color:Dodgerblue;">-云-</h3>
+    <p>每个好看的风景都是老天赏脸（嘻嘻）。大部分的拍摄地点要么在公交车上，要么在去车站的路上。<br>
     <img src="照片\云1.jpg" height="312" width="312"><br>
     <img src="照片\云2.jpg" height="312" width="312"><br>
     <img src="照片\云3.jpg" height="211" width="375"><br>
@@ -99,14 +103,17 @@
     <img src="照片\云11.jpg" height="312" width="416"><br>
     <img src="照片\云12.jpg" height="312" width="416"><br>
   <h3 style="color:Dodgerblue;">-花-</h3>
-    <img src="照片\花1.jpg" height="416" width="312"><br>
-    <img src="照片\花2.jpg" height="312" width="416"><br>
-    <img src="照片\花3.jpg" height="416" width="312"><br>
+    花就很杂了，啥都有。八一大花园的杏花，桃花；我妈养的有水仙，石竹；最后还有乱入的丝瓜花...<br>
+    <img src="照片\花4.5.jpg" height="312" width="312"><br>
     <img src="照片\花4.jpg" height="312" width="312"><br>
     <img src="照片\花5.jpg" height="312" width="416"><br>
+    <img src="照片\花6.5.jpg" height="312" width="416"><br>
+    <img src="照片\花1.jpg" height="312" width="416"><br>
+    <img src="照片\花2.jpg" height="312" width="416"><br>
+    <img src="照片\花3.jpg" height="416" width="312"><br>
     <img src="照片\花7.jpg" height="312" width="416"><br>
-    <img src="照片\花8.jpg" height="312" width="416"><br>
     <img src="照片\花6.jpg" height="312" width="416"><br>
+    <img src="照片\花8.jpg" height="312" width="416"><br>
   <h3 style="color:Dodgerblue;">-足球-</h3>
     <img src="照片\足1.jpg" height="312" width="416"><br>
     <img src="照片\足2.jpg" height="312" width="416"><br>
