--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
 <body>
   <h1 style="font-size:28px;">欢迎来到<br>Acai<br>的空间</h1>
   <h2 align="center" style="color:Darkblue;">Acai的自我介绍</h2>
-  <p style="font-family:华文楷体;">我叫蔡依珊。在北京市八一学校国际部就读高二。是一个简简单单，不会化妆，胖胖的女生。
+  <p style="font-family:华文楷体;">我叫蔡依珊。在北京市八一学校国际部就读高二。是一个简(直)简（来）单（直）单（去），不会化妆，（真的）胖胖的女生。
     生日是万圣节前夜的那天。天蝎女。不信妖魔鬼怪，也无宗教信仰。牙不太好,但是爱吃橡皮糖和棒棒糖!
-    搭这个网站的目的可能就是让更多的人认识和了解我吧。我会在这里分享我自己的成长经历和各种学习经验。
-    <br>照片，不，放错了
-    <br><img src="照片\照片.jpg" height="320" width="320">
-    <br>照骗(微笑)
-    <br><img src="照片\自拍.jpg" height="320" width="425">
+    搭这个网站的目的可能就是让更多的人认识和了解我吧。我会在这里分享我自己的成长经历和各种学习经验。<br>
+    照片,em,放错了<br>
+    <img src="照片\照片.jpg" height="320" width="320"><br>
+    照骗(微笑)<br>
+    <img src="照片\自拍.jpg" height="320" width="425">
   </p>
   <!--src要从upload上面弄，高度和宽度要用px或者pixel-->
   <hr />
   <h2 align="center" style="color:Darkblue;">小小动力——我的爱好</h2>
     <h3 style="color:Dodgerblue;">画画</h3>
-    <p> Acai在小时候就开始学画画了。没学过简笔画，没学过漫画，一开始就学的素描，因为素描是基础。素描的深浅叫调（diao四声）子。
+    <p>
+      Acai在小时候就开始学画画了。没学过简笔画，没学过漫画，一开始就学的素描，因为素描是基础。素描的深浅叫调（diao四声）子。
       我记得小学一年级那会跟着哥哥姐姐一起画正方体，画完老师就说调子画“死”了，还给我吓一跳，意思是线条画的太密，没有留出透气的空间，显得很沉闷。后来就慢慢学，
       学的还算快吧（沾沾自喜）四年级就学完了石膏还有人像，考了九级。画了一堆老头子和一个老太太，老太太画的最好（沉思）。
       <br>后来就学的水粉，学了两年，脱离黑白灰的苦海。最喜欢画风景了，能把景色用自己的理解和感受表现出来，不同心情下也有不同的作品。<br>
@@ -41,9 +42,9 @@
       还尝试了一点点国画，虽然不是很擅长，算是个想继续的体验。<br>
       <img src="照片\国画.jpg" alt="白描" width="320" height="425">
     </p>
-
     <h3 style="color:Dodgerblue;">弹琵琶</h3>
-    <p>是二年级开始学的琵琶。据我妈说，说我看电视上人家大姐姐穿旗袍弹琵琶好看所以才想学琴。现在这是什么神奇的理由。
+    <p>
+      是二年级开始学的琵琶。据我妈说，说我看电视上人家大姐姐穿旗袍弹琵琶好看所以才想学琴。现在这是什么神奇的理由。
       前前后后有三个琵琶老师。上初中后，就去了我们初中的乐团。在乐团的一年多的时间是我最难忘的经之一。
       <div>其实初一的时候就找过乐团的老师了，但那会不想去。初二的时候还是进去了，最开始很陌生。两个高中的学姐，两个同年级的女生，还有两个初一的学妹。
       尴尬的点就在于，两个人一个谱架台，我正好单着了，其实还好。在乐团不同于去上小班课，老师不会特意的照顾你。就在这个环境下学会了调弦，换弦。那会算是成长了很多。
@@ -66,14 +67,19 @@
     <p>
       刻橡皮章是从初一开始的。初中设了有选修课，我就迷迷糊糊选了一点都不了解的橡皮章。第一个章子是熊猫，应该是史上最丑，没有之一，看起来毫无天赋，但还是能看得过去。
       回家后就买了一个新手套装（警告：别买），一般般难用。跟着老师刻了一整年，自己初一闲的琢磨琢磨，算是小有成就。有的时候同学还让我帮他们刻呢。初二就是自己的霍霍时光。
-      上课听听讲，下课刻刻章，满世界都是橡皮渣滓。初三的时候因为中考，放下了一年。等一考完，立马就捡起来了。
+      上课听听讲，下课刻刻章，满世界都是橡皮渣滓。初三的时候因为中考，放下了一年。等一考完，立马就捡起来了。我可以算是一个章娘了！
       <div>图案有很多，可以刻喜爱的动漫人物，或者就是简单的猫猫狗狗或者植物，还能当做装饰。<br>
+        人生中的第一个章子，是不是很丑哈哈哈。<br>
         <img src="照片\人生中的第一个章子.jpg" alt="人生中的第一个章子" height="416" width="312"><br>
-        <img src="照片\傻猫.jpg" alt="傻猫" height="416" width="312"><br>
-        <img src="照片\傻狗.jpg" alt="哈士奇，据说是我的自画像" height="416" width="312"><br>
         <img src="照片\安东尼的兔子.jpg" alt="安东尼的兔子" height="312" width="416"><br>
         <img src="照片\黑子的篮球.jpg" alt="黑子的篮球" height="416" width="312"><br>
-        <img src="照片\saber.jpg" alt="我的章" height="416" width="312"><br>
+        <img src="照片\saber.jpg" alt="saber" height="416" width="312"><br>
+        最近越发喜欢那种可爱精巧的小章子了！什么皮卡丘啊，小面包啊都好可爱。<br>
+        <img src="照片\皮卡丘.jpg" alt="皮卡丘" height="312" width="416"><br>
+        <img src="照片\早餐包.jpg" alt="早餐包" height="312" width="416"><br>
+        <img src="照片\傻猫.jpg" alt="傻猫" height="416" width="312"><br>
+        据说这是我的自画像？？？<br>
+        <img src="照片\傻狗.jpg" alt="哈士奇，据说是我的自画像" height="416" width="312"><br>
       比起图案，更喜欢刻字。可能是因为自己的字太丑，所以靠刻出来的字补补。喜欢刻字的感觉，很细致。<br>
       <img src="照片\福到了.jpg" alt="福" height="312" width="312"><br>
       <img src="照片\平安喜乐.jpg" alt="平安喜乐" height="416" width="312"><br>
@@ -81,15 +87,17 @@
       <img src="照片\bjt.jpg" alt="字" height="312" width="416"><br>
       <img src="照片\人狠.jpg" alt="字" height="312" width="312">
       </div>
-      <br>刻橡皮章算是我的最放松的方式。可以放空自己的脑袋，累的时候什么也不想，想不明白事情的时候也可以什么都想。四年攒下来已经有三四盒章子了。大部分的章子刻完以后会印到卡纸上当做明信片或者书签。
-      还有的会当做贺卡送给老师和同学。<br>
+      <br>刻橡皮章算是我的最放松的方式。可以放空自己的脑袋，累的时候什么也不想，想不明白事情的时候也可以什么都想。四年攒下来已经有三四盒章子了。
+      上了高中带了艺术社，时不时的带着社员刻章子。大部分的章子刻完以后会印到卡纸上当做明信片或者书签，还有的会当做贺卡送给老师和同学。<br>
       <img src="照片\圣诞节.jpg" alt="贺卡" height="219" width="288">
     </p>
   <hr />
+
   <h2 align="center" style="color:Darkblue;">记录生活——不到入门级摄影:)</h2>
   <p>真的算一个不到入门级的小白，平常看到好看的景色就喜欢拿着手机或者相机拍下来.</p>
   <h3 style="color:Dodgerblue;">-云-</h3>
-    <p>每个好看的风景都是老天赏脸（嘻嘻）。大部分的拍摄地点要么在公交车上，要么在去车站的路上。<br>
+    <p>
+      每个好看的风景都是老天赏脸（嘻嘻）。大部分的拍摄地点要么在公交车上，要么在去车站的路上。<br>
     <img src="照片\云1.jpg" height="312" width="312"><br>
     <img src="照片\云2.jpg" height="312" width="312"><br>
     <img src="照片\云3.jpg" height="211" width="375"><br>
@@ -115,6 +123,7 @@
     <img src="照片\花6.jpg" height="312" width="416"><br>
     <img src="照片\花8.jpg" height="312" width="416"><br>
   <h3 style="color:Dodgerblue;">-足球-</h3>
+    足球的照片是上学年拍的，自我感觉良好（赞），还没有很多拍动态人物的经验，继续加油！<br>
     <img src="照片\足1.jpg" height="312" width="416"><br>
     <img src="照片\足2.jpg" height="312" width="416"><br>
     <img src="照片\足3.jpg" height="312" width="416"><br>
@@ -122,6 +131,7 @@
     <img src="照片\足5.jpg" height="312" width="416"><br>
     <img src="照片\足6.jpg" height="312" width="312"><br>
   <h3 style="color:Dodgerblue;">-故宫-</h3>
+    好久之前去的故宫啦，最喜欢第二张和第六张，有那种“一入宫门深似海”的感觉。<br>
     <img src="照片\故宫1.jpg" height="312" width="312"><br>
     <img src="照片\故宫2.jpg" height="416" width="312"><br>
     <img src="照片\故宫3.jpg" height="312" width="416"><br>
@@ -129,6 +139,7 @@
     <img src="照片\故宫4.jpg" height="312" width="312"><br>
     <img src="照片\故宫6.jpg" height="416" width="312"><br>
   <h3 style="color:Dodgerblue;">-川渝之旅-</h3>
+    是去游学，游学在我身上有奇怪的定律，最开始明明有人跟我一起逛，每每到最后，都只是我独自在景区溜达。<br>
     <img src="照片\成1.jpg" height="312" width="312"><br>
     <img src="照片\成2.jpg" height="312" width="312"><br>
     <img src="照片\成3.jpg" height="416" width="312"><br>
@@ -136,7 +147,8 @@
     <img src="照片\成5.jpg" height="312" width="416"><br>
     <img src="照片\成6.jpg" height="312" width="416"><br>
     <img src="照片\成7.jpg" height="312" width="416"><br>
-  <h3 style="color:Dodgerblue;">-sat之旅-</h3>
+  <h3 style="color:Dodgerblue;">-HK-</h3>
+    去香港还是因为考sat:)，但是考试并不能影响我的好心情，开心开心。<br>
     <img src="照片\香港1.jpg" height="312" width="416"><br>
     <img src="照片\香港2.jpg" height="312" width="416"><br>
     <img src="照片\香港3.jpg" height="312" width="416"><br>
@@ -144,13 +156,19 @@
     <img src="照片\香港5.jpg" height="312" width="416"><br>
     <img src="照片\香港6.jpg" height="312" width="416"><br>
     <img src="照片\香港7.jpg" height="312" width="312"><br>
+    小白说夜景不是很好照，我赞同！照完了还得调啊调，光源太多了。<br>
     <img src="照片\香港8.jpg" height="312" width="416"><br>
     <img src="照片\香港9.jpg" height="416" width="312"><br>
   <h3 style="color:Dodgerblue;">-杂-</h3>
+    最后这部分就是我的杂图了，实名很杂~<br>
+    20年春节蜗居在家，偶尔下雪看着贼开心！（还被恐吓说雪里面有病毒不能玩雪）<br>
     <img src="照片\杂1.jpg" height="312" width="416"><br>
+    初三上学路上的家属楼，我最喜欢的颜色！曾经无数次吐槽房子都爱红砖色...<br>
     <img src="照片\杂2.jpg" height="312" width="312"><br>
     <img src="照片\杂3.jpg" height="416" width="312"><br>
+    还是初三。那天正好下完雨，咋看都好看，最喜欢下完雨后的空气，有泥土混合青草的香味~<br>
     <img src="照片\杂4.jpg" height="312" width="416"><br>
+    大学里，女学生应该有的样子？<br>
     <img src="照片\杂5.jpg" height="416" width="312"><br>
     <img src="照片\杂6.jpg" height="312" width="416"><br>
     <img src="照片\杂7.jpg" height="312" width="416"><br>
@@ -159,6 +177,7 @@
     <img src="照片\杂10.jpg" height="312" width="416"><br>
     <img src="照片\杂11.jpg" height="312" width="312"><br>
     <img src="照片\杂12.jpg" height="312" width="416"><br>
+    很喜欢这张！是中考完去欢乐谷，中途在地铁站等同学的时候照的。<br>
     <img src="照片\杂13.jpg" height="312" width="416"><br>
     <img src="照片\杂15.jpg" height="312" width="312"><br>
     <img src="照片\杂16.jpg" height="312" width="312"><br>
