--- a/index.html
+++ b/index.html
@@ -22,25 +22,47 @@
     <p>
       Acai在小时候就开始学画画了。没学过简笔画，没学过漫画，一开始就学的素描，因为素描是基础。素描的深浅叫调（diao四声）子。
       我记得小学一年级那会跟着哥哥姐姐一起画正方体，画完老师就说调子画“死”了，还给我吓一跳，意思是线条画的太密，没有留出透气的空间，显得很沉闷。后来就慢慢学，
-      学的还算快吧（沾沾自喜）四年级就学完了石膏还有人像，考了九级。画了一堆老头子和一个老太太，老太太画的最好（沉思）。
-      <br>后来就学的水粉，学了两年，脱离黑白灰的苦海。最喜欢画风景了，能把景色用自己的理解和感受表现出来，不同心情下也有不同的作品。<br>
-      <img src="照片\水粉.jpg" alt="水粉" height="240" width="320"><br>
-      <img src="照片\水粉和我？.jpg" alt="水粉和我？" height="180" width="320">
+      学的还算快吧（沾沾自喜）四年级就学完了石膏还有人像。考九级的时候画的是呆呆青年。大部分还是在练习，画了一堆老头子和一个老太太，老太太画的最好（沉思）。<br>
+      <img src="照片\素描1.jpg" alt="眼睛局部" height="425" width="320"><br>
+      <img src="照片\素描2.jpg" alt="阿格里巴" height="425" width="320"><br>
+      为了考八级画了五六遍伏尔泰，这个慈祥的老头。<br>
+      <img src="照片\素描3.jpg" alt="伏尔泰" height="425" width="320"><br>
+      <img src="照片\素描4.jpg" alt="青年男子" height="425" width="320"><br>
+      <img src="照片\素描5.jpg" alt="青年男子" height="425" width="320"><br>
+      <img src="照片\素描6.jpg" alt="老头子" height="425" width="320"><br>
+      <img src="照片\素描7.jpg" alt="老太太" height="425" width="320"><br>
+      <br>后来就学的水粉，学了两年，脱离黑白灰的苦海。最擅长画景物，瓶瓶罐罐瓜果蔬菜什么的，考了个八级玩玩。但最喜欢画风景，能把景色用自己的理解和感受表现出来，不同心情下也有不同的作品。<br>
+      <img src="照片\水粉1.jpg" alt="水粉" height="320" width="425"><br>
+      <img src="照片\水粉2.jpg" alt="水粉" height="320" width="425"><br>
+      <img src="照片\水粉3.jpg" alt="水粉" height="320" width="425"><br>
+      <img src="照片\水粉4.jpg" alt="水粉" height="425" width="320"><br>
+      <img src="照片\水粉5.jpg" alt="水粉" height="425" width="320"><br>
+      <img src="照片\水粉6.jpg" alt="水粉" height="320" width="425"><br>
+      <img src="照片\水粉7.jpg" alt="雪山" height="320" width="425"><br>
+      <img src="照片\水粉和我？.jpg" alt="水粉和我？" height="259" width="460">
       <div>
         小学毕业那会，就用美术特长生考去了十九中，顺理成章的进了美术社团。
         在美术社团学的还是素描和水粉，也画了墙绘，尝试了一点点水彩。水彩以失败而告终。画井盖和画墙都是全新的尝试，同样的磨人却又有趣。画一块墙从清理墙面到留下自己的大名要花一天的时间。
         清理墙面，铺底色，画主体，画整体，扣细节，最后签名，完成！画完了以后顶顶骄傲和自豪。高一的时候也回去和同学一起画墙来着！主题是中国戏剧，画了一个大美女。
       </div>
-      <img src="照片\橙子？.jpg" alt="画井盖" width="425" height="320"><br>
+      <img src="照片\水彩1.jpg" alt="水彩" height="425" width="320"><br>
+      <img src="照片\水彩2.jpg" alt="水彩" height="425" width="320"><br>
       <img src="照片\橙子合照.jpg" alt="和同学的合影" width="320" height="425"><br>
-      <img src="照片\树？.jpg" alt="画井盖" width="425" height="320"><br>
+      <img src="照片\橙子？.jpg" alt="橙子" width="425" height="320"><br>
+      <img src="照片\树？.jpg" alt="树" width="425" height="320"><br>
       <img src="照片\被偷拍.jpg" alt="画井盖" height="180" width="320"><br>
       <img src="照片\辛普森墙绘.jpg" alt="辛普森墙绘" width="425" height="320"><br>
-      <img src="照片\戏剧墙绘.jpg" alt="戏剧墙绘" width="425" height="425"><br>
+      <img src="照片\戏剧墙绘.jpg" alt="戏剧墙绘" width="425" height="320"><br>
       学了电脑美术，画了一个皮影制作人和皮影对话的场景的作品，还有一些简单的练习。<br>
-      <img src="照片\电脑绘画.jpg" alt="电脑绘画" width="425" height="320"><br>
+      <img src="照片\板绘1.jpg" alt="电脑绘画" width="425" height="320"><br>
+      <img src="照片\板绘2.jpg" alt="电脑绘画" width="320" height="425"><br>
       还尝试了一点点国画，虽然不是很擅长，算是个想继续的体验。<br>
-      <img src="照片\国画.jpg" alt="白描" width="320" height="425">
+      <img src="照片\国画.jpg" alt="白描" width="320" height="425"><br>
+      时不时自己画点小画:) 使用马克笔-->原地爆炸<br>
+      <img src="照片\手绘1.jpg" alt="女生和大公鸡" height="425" width="320"><br>
+      <img src="照片\手绘2.jpg" alt="小樱" height="425" width="320"><br>
+      <img src="照片\手绘3.jpg" alt="头像" height="320" width="425"><br>
+      <img src="照片\手绘4.jpg" alt="新春贺图" height="320" width="425"><br>
     </p>
     <h3 style="color:Dodgerblue;">弹琵琶</h3>
     <p>
@@ -94,9 +116,8 @@
   <hr />
 
   <h2 align="center" style="color:Darkblue;">记录生活——不到入门级摄影:)</h2>
-  <p>真的算一个不到入门级的小白，平常看到好看的景色就喜欢拿着手机或者相机拍下来.</p>
-  <h3 style="color:Dodgerblue;">-云-</h3>
-    <p>
+  <p>真的算一个不到入门级的小白，平常看到好看的景色就喜欢拿着手机或者相机拍下来.<br>
+   <h3 style="color:Dodgerblue;">-云-</h3>
       每个好看的风景都是老天赏脸（嘻嘻）。大部分的拍摄地点要么在公交车上，要么在去车站的路上。<br>
     <img src="照片\云1.jpg" height="312" width="312"><br>
     <img src="照片\云2.jpg" height="312" width="312"><br>
@@ -110,7 +131,7 @@
     <img src="照片\云10.jpg" height="312" width="312"><br>
     <img src="照片\云11.jpg" height="312" width="416"><br>
     <img src="照片\云12.jpg" height="312" width="416"><br>
-  <h3 style="color:Dodgerblue;">-花-</h3>
+   <h3 style="color:Dodgerblue;">-花-</h3>
     花就很杂了，啥都有。八一大花园的杏花，桃花；我妈养的有水仙，石竹；最后还有乱入的丝瓜花...<br>
     <img src="照片\花4.5.jpg" height="312" width="312"><br>
     <img src="照片\花4.jpg" height="312" width="312"><br>
@@ -122,7 +143,7 @@
     <img src="照片\花7.jpg" height="312" width="416"><br>
     <img src="照片\花6.jpg" height="312" width="416"><br>
     <img src="照片\花8.jpg" height="312" width="416"><br>
-  <h3 style="color:Dodgerblue;">-足球-</h3>
+   <h3 style="color:Dodgerblue;">-足球-</h3>
     足球的照片是上学年拍的，自我感觉良好（赞），还没有很多拍动态人物的经验，继续加油！<br>
     <img src="照片\足1.jpg" height="312" width="416"><br>
     <img src="照片\足2.jpg" height="312" width="416"><br>
@@ -130,7 +151,7 @@
     <img src="照片\足4.jpg" height="312" width="416"><br>
     <img src="照片\足5.jpg" height="312" width="416"><br>
     <img src="照片\足6.jpg" height="312" width="312"><br>
-  <h3 style="color:Dodgerblue;">-故宫-</h3>
+   <h3 style="color:Dodgerblue;">-故宫-</h3>
     好久之前去的故宫啦，最喜欢第二张和第六张，有那种“一入宫门深似海”的感觉。<br>
     <img src="照片\故宫1.jpg" height="312" width="312"><br>
     <img src="照片\故宫2.jpg" height="416" width="312"><br>
@@ -138,16 +159,18 @@
     <img src="照片\故宫5.jpg" height="312" width="312"><br>
     <img src="照片\故宫4.jpg" height="312" width="312"><br>
     <img src="照片\故宫6.jpg" height="416" width="312"><br>
-  <h3 style="color:Dodgerblue;">-川渝之旅-</h3>
-    是去游学，游学在我身上有奇怪的定律，最开始明明有人跟我一起逛，每每到最后，都只是我独自在景区溜达。<br>
+   <h3 style="color:Dodgerblue;">-川渝之旅-</h3>
+    是去游学，游学在我身上有奇怪的定律，最开始明明有人跟我一起逛，每每到最后，都只是我独自在景区溜达。喜欢老街那种热闹又掩不住悲凉。<br>
     <img src="照片\成1.jpg" height="312" width="312"><br>
     <img src="照片\成2.jpg" height="312" width="312"><br>
     <img src="照片\成3.jpg" height="416" width="312"><br>
     <img src="照片\成4.jpg" height="312" width="312"><br>
+    止不住的多拍两张红配绿~<br>
     <img src="照片\成5.jpg" height="312" width="416"><br>
     <img src="照片\成6.jpg" height="312" width="416"><br>
+    熊猫真的好赏脸.可爱！<br>
     <img src="照片\成7.jpg" height="312" width="416"><br>
-  <h3 style="color:Dodgerblue;">-HK-</h3>
+   <h3 style="color:Dodgerblue;">-HK-</h3>
     去香港还是因为考sat:)，但是考试并不能影响我的好心情，开心开心。<br>
     <img src="照片\香港1.jpg" height="312" width="416"><br>
     <img src="照片\香港2.jpg" height="312" width="416"><br>
@@ -159,7 +182,7 @@
     小白说夜景不是很好照，我赞同！照完了还得调啊调，光源太多了。<br>
     <img src="照片\香港8.jpg" height="312" width="416"><br>
     <img src="照片\香港9.jpg" height="416" width="312"><br>
-  <h3 style="color:Dodgerblue;">-杂-</h3>
+   <h3 style="color:Dodgerblue;">-杂-</h3>
     最后这部分就是我的杂图了，实名很杂~<br>
     20年春节蜗居在家，偶尔下雪看着贼开心！（还被恐吓说雪里面有病毒不能玩雪）<br>
     <img src="照片\杂1.jpg" height="312" width="416"><br>
@@ -181,5 +204,6 @@
     <img src="照片\杂13.jpg" height="312" width="416"><br>
     <img src="照片\杂15.jpg" height="312" width="312"><br>
     <img src="照片\杂16.jpg" height="312" width="312"><br>
+  </p>
   </h2>
 </html>
