add a video by upload it on youku

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
      <img src="照片\憨憨合照.jpg" alt="我和同学的合影" height="432" width="324"><br>
      <img src="照片\三十九中交流演出.jpg" alt="与青岛三十九中交流演出" height="288" width="384"><br>
      <img src="照片\三十九中交流合照.jpg" alt="与青岛三十九中交流演出" height="280" width="400"><br>
-     <a href="照片\卢沟晓月-大宅门写意.wmv">青岛演出视频</a>
+     <iframe height=280 width=400 src='https://player.youku.com/embed/XNDYyNTQ4MjQ5Ng==' frameborder=0 'allowfullscreen'></iframe>>
     </p>
     <h3 style="color:Dodgerblue;">橡皮章</h3>
     <p>
