add a video about playing pipa

--- a/index.html
+++ b/index.html
@@ -66,9 +66,12 @@
     </p>
     <h3 style="color:Dodgerblue;">弹琵琶</h3>
     <p>
-      是二年级开始学的琵琶。据我妈说，说我看电视上人家大姐姐穿旗袍弹琵琶好看所以才想学琴。现在这是什么神奇的理由。
-      前前后后有三个琵琶老师。上初中后，就去了我们初中的乐团。在乐团的一年多的时间是我最难忘的经之一。
-      <div>其实初一的时候就找过乐团的老师了，但那会不想去。初二的时候还是进去了，最开始很陌生。两个高中的学姐，两个同年级的女生，还有两个初一的学妹。
+      是二年级开始学的琵琶。据我妈说，说我看电视上人家大姐姐穿旗袍弹琵琶好看所以才想学琴。现在这是什么神奇的理由。<br>
+      这是第一次上台演出的视频，高糊，听个声儿就完了。我是左数第二个。<br>
+      <video height="288" width="384" controls>
+        <source src="照片\第一次登台演出.mp4" type="video/mp4">
+      </video>
+      <div>上初中后，就去了我们初中的乐团。在北京市第十九中学金帆民乐团的一年多的时间是我最难忘的经之一。其实初一的时候就找过乐团的老师了，但那会不想去。初二的时候还是进去了，最开始很陌生。两个高中的学姐，两个同年级的女生，还有两个初一的学妹。
       尴尬的点就在于，两个人一个谱架台，我正好单着了，其实还好。在乐团不同于去上小班课，老师不会特意的照顾你。就在这个环境下学会了调弦，换弦。那会算是成长了很多。
       有点压力是在于训练的老师吧，他就乐意坐在单着的人旁边。总指挥时不时来一下，带着浓郁的古龙香水的味道。
       初二半个学期的合奏适应期就在古龙香水和槟榔味儿中度过。下学期的时候，因为同届的有个女生回老家了，我终于可以换到二谱台了！</div>
