add information about volunteering

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <hr />
 
   <h2 align="center" style="color:Darkblue;">记录生活——不到入门级摄影:)</h2>
-  <p>真的算一个不到入门级的小白，平常看到好看的景色就喜欢拿着手机或者相机拍下来.<br>
+   <p>真的算一个不到入门级的小白，平常看到好看的景色就喜欢拿着手机或者相机拍下来.<br>
    <h3 style="color:Dodgerblue;">-云-</h3>
       每个好看的风景都是老天赏脸（嘻嘻）。大部分的拍摄地点要么在公交车上，要么在去车站的路上。<br>
     <img src="照片\云1.jpg" height="312" width="312"><br>
@@ -199,14 +199,49 @@
     <img src="照片\杂6.jpg" height="312" width="416"><br>
     <img src="照片\杂7.jpg" height="312" width="416"><br>
     <img src="照片\杂8.jpg" height="312" width="416"><br>
+    我妈自己种的小西红柿（赞）<br>
     <img src="照片\杂9.jpg" height="312" width="312"><br>
     <img src="照片\杂10.jpg" height="312" width="416"><br>
+    颐和园的夕阳，美美的<br>
     <img src="照片\杂11.jpg" height="312" width="312"><br>
     <img src="照片\杂12.jpg" height="312" width="416"><br>
     很喜欢这张！是中考完去欢乐谷，中途在地铁站等同学的时候照的。<br>
     <img src="照片\杂13.jpg" height="312" width="416"><br>
     <img src="照片\杂15.jpg" height="312" width="312"><br>
     <img src="照片\杂16.jpg" height="312" width="312"><br>
-  </p>
+   </p>
   </h2>
+
+  <hr />
+  <h2 align="center" style="color:Darkblue;">星点贡献——我的志愿生涯。</h2>
+   <p>志愿是从高一开始的。社团招新的那会，有个点儿围了一圈人扫二维码，然后我也扫了，就进了那个微信群。<br>
+     第一个志愿活动在高一的九月份，是一个宣传急救知识的志愿活动，没什么人报名，我抱着试试看的心情就去了。然后去了就挺尴尬了，就不认识的仨学长和我。
+     但是活动本身还是挺好的。先会有专业人士教我们急救，然后我们再向大众传授白金十分钟和急救的知识。 由于地点在宋庆龄青少年文化交流中心，
+     周围来来往往的都是上完课外班的小孩子们。挺锻炼自己的传授能力和亲和度的。忙忙叨叨一下午觉得教别人知识蛮自豪！<br>
+     <img src="照片\急救1.jpg" alt="传授急救知识" height="320" width="425"><br>
+     <img src="照片\急救2.jpg" alt="传授急救知识" height="320" width="425">
+     <div>后来前前后后做了一些零散的志愿活动，就比如说，和同学去康辉老年公寓唱《当你老了》，去了海伦聋儿康复园教小孩子折纸。做这些活动的间隔，
+       因为我是国际部的要找规划，总有规划问我，你的志愿活动给他们改变了什么，这个问题简单来说，没什么，没改变什么。又或者，改变了一点，一点表层的东西。
+       曾经很痛恨自己看到一些很痛心的，很想伸出援手的情况却帮不了什么大忙，并不能从根本上改变这些问题。但后来想了想，改变一点总是改变了，
+       比起什么都不做，慢慢的改变总会在有一天呈现出他最大的成效。<br>
+      <img src="照片\敬老院1.jpg" alt="敬老院唱歌" height="320" width="425"><br>
+      <video height="320" width="425" controls>
+        <source src="照片\敬老院2.mp4" type="video/mp4">
+      </video><br>
+      <img src="照片\海伦1.jpg" alt="青蛙" height="320" width="320"><br>
+      <img src="照片\海伦2.jpg" alt="教折纸" height="320" width="320"><br></div>
+      <div>到太阳村了，太阳村是重头戏。这是第一次真正意义上的体验生活。我们去太阳村没支教，去搬化肥来着。为啥叫体验生活呢，这个化肥是麻袋装的，
+      一卡车拉来的，50公斤的，大概有200袋不到：）真的搬得时候嘴上笑嘻嘻，心里mmp。我这辈子都没搬过这么多这么沉的东西，搬完之后觉得自己不是女的。<br>
+      关于太阳村的起源，那就有得说了。有关太阳村起源和妈妈咪呀的宣传。这里的孩子都是服刑人员的子女或者是被拐卖然后救下的孩子。
+      太阳村是西安的一名叫张淑琴的女警官创办的，创办的目的就是让这些无辜的孩子有安身之所。北京的这个太阳村经济来源是后面的养殖场，还有草莓地。
+      大一点的孩子们（其实看着挺小），就会去帮着大人种草莓。衣食住行的资金，大部分还是靠捐助，小部分靠卖草莓。但是我没咋看出来捐助很多，虽然有一面墙
+      贴满了各方捐助的表彰，说实在的，（不知道流进了谁的腰包，我看着老师穿的挺好）<br>
+      有三个男孩跟我们一起搬肥料，后来得知跟他们都已经上初中了! 我很惊讶，真的，他们力气很大，很惊讶的是他们会开那个长得跟三蹦子一样的四个轮子的电动小车（不知道叫啥）。
+      我搬了一天的肥料手已经很粗糙了，可以想象到他们的手有多粗糙，没有手套，日复一日各种农活。而且腰肩膀胳膊酸到爆炸！<br>
+      看那白色伟岸的背影：）<br>
+      <img src="照片\太阳村1.jpg" alt="太阳村" height="320" width="425"><br>
+      <img src="照片\太阳村2.jpg" alt="太阳村" height="320" width="425"><br>
+      <img src="照片\太阳村3.jpg" alt="太阳村" height="320" width="425"><br>
+
+   </p>
 </html>
