--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1 style="font-size:28px;">欢迎来到<br>Acai<br>的空间</h1>
+  <embed src="照片\lolipop.mp3" height="50" width="465">
   <h2 align="center" style="color:Darkblue;">Acai的自我介绍</h2>
   <p style="font-family:华文楷体;">我叫蔡依珊。在北京市八一学校国际部就读高二。是一个简(直)简（来）单（直）单（去），不会化妆，（真的）胖胖的女生。
     生日是万圣节前夜的那天。天蝎女。不信妖魔鬼怪，也无宗教信仰。牙不太好,但是爱吃橡皮糖和棒棒糖!
@@ -229,7 +230,8 @@
         <source src="照片\敬老院2.mp4" type="video/mp4">
       </video><br>
       <img src="照片\海伦1.jpg" alt="青蛙" height="320" width="320"><br>
-      <img src="照片\海伦2.jpg" alt="教折纸" height="320" width="320"><br></div>
+      <img src="照片\海伦2.jpg" alt="教折纸" height="320" width="320"><br>
+    </div>
       <div>到太阳村了，太阳村是重头戏。这是第一次真正意义上的体验生活。我们去太阳村没支教，去搬化肥来着。为啥叫体验生活呢，这个化肥是麻袋装的，
       一卡车拉来的，50公斤的，大概有200袋不到：）真的搬得时候嘴上笑嘻嘻，心里mmp。我这辈子都没搬过这么多这么沉的东西，搬完之后觉得自己不是女的。<br>
       关于太阳村的起源，那就有得说了。有关太阳村起源和妈妈咪呀的宣传。这里的孩子都是服刑人员的子女或者是被拐卖然后救下的孩子。
@@ -242,6 +244,12 @@
       <img src="照片\太阳村1.jpg" alt="太阳村" height="320" width="425"><br>
       <img src="照片\太阳村2.jpg" alt="太阳村" height="320" width="425"><br>
       <img src="照片\太阳村3.jpg" alt="太阳村" height="320" width="425"><br>
-
+    </div>
+      后面的志愿就很零散啦，去一个网络文学大会做志愿者，扫扫二维码进场馆。站累了还能去逛一逛，也不知道这种混志愿北京时长的志愿活动做了有啥意义。<br>
+      最近做的是一个给山区孩子录音读英文绘本的活动，读好了以后放到公众号上。我这么卡卡卡雷厉风行的人，就及其锻炼自己的轻柔能力，可不能把睡前故事读的
+      像要上战场。
+      <audio controls>
+       <source src="照片\the nonthreatening ghost.mp3" type="audio/mpeg">
+      </audio>
    </p>
 </html>
