--- a/index.html
+++ b/index.html
@@ -4,21 +4,33 @@
   <meta charset= "utf-8">
   <title>acai的个人网站</title>
 </head>
+
 <body>
-  <h1 style="font-size:28px;">欢迎来到<br>Acai<br>的空间</h1>
-  <embed src="照片\lolipop.mp3" height="50" width="465">
-  <h2 align="center" style="color:Darkblue;">Acai的自我介绍</h2>
-  <p style="font-family:华文楷体;">我叫蔡依珊。在北京市八一学校国际部就读高二。是一个简(直)简（来）单（直）单（去），不会化妆，（真的）胖胖的女生。
+  <h1 style="font-size:28px; background-color:rgba(255,255,0,0.25);">欢迎来到<br>Acai<br>的空间</h1>
+  <h2 align="center" style="color:navy;">Acai的自我介绍</h2>
+  <p>我叫蔡依珊。在北京市八一学校国际部就读高二。是一个简(直)简（来）单（直）单（去），不会化妆，（真的）胖胖的女生。
     生日是万圣节前夜的那天。天蝎女。不信妖魔鬼怪，也无宗教信仰。牙不太好,但是爱吃橡皮糖和棒棒糖!
     搭这个网站的目的可能就是让更多的人认识和了解我吧。我会在这里分享我自己的成长经历和各种学习经验。<br>
     照片,em,放错了<br>
     <img src="照片\照片.jpg" height="320" width="320"><br>
     照骗(微笑)<br>
-    <img src="照片\自拍.jpg" height="320" width="425">
+    <img src="照片\自拍.jpg" height="320" width="425"><br>
+    <embed src="照片\lolipop.mp3" height="50" width="465">
+    <div id="目录">
+      <!--如果是转到其他的网址的话，是这个:<label for="">link section</label> -->
+      <a href="#小小动力——我的爱好"><br>
+        转到小小动力——我的爱好
+      <a href="#记录生活——不到入门级摄影"><br>
+        转到记录生活——不到入门级摄影
+      <a href="#星点贡献——我的志愿生涯"><br>
+        转到星点贡献——我的志愿生涯
+      </a>
+      <!--一定要加#这个键啊！不然就错了！-->
   </p>
-  <!--src要从upload上面弄，高度和宽度要用px或者pixel-->
   <hr />
-  <h2 align="center" style="color:Darkblue;">小小动力——我的爱好</h2>
+
+  <div id="小小动力——我的爱好">
+  <h2 align="center" style="color:navy;">小小动力——我的爱好</h2>
     <h3 style="color:Dodgerblue;">画画</h3>
     <p>
       Acai在小时候就开始学画画了。没学过简笔画，没学过漫画，一开始就学的素描，因为素描是基础。素描的深浅叫调（diao四声）子。
@@ -117,9 +129,11 @@
       上了高中带了艺术社，时不时的带着社员刻章子。大部分的章子刻完以后会印到卡纸上当做明信片或者书签，还有的会当做贺卡送给老师和同学。<br>
       <img src="照片\圣诞节.jpg" alt="贺卡" height="219" width="288">
     </p>
+  </div>
   <hr />
 
-  <h2 align="center" style="color:Darkblue;">记录生活——不到入门级摄影:)</h2>
+  <div id="记录生活——不到入门级摄影">
+  <h2 align="center" style="color:navy;">记录生活——不到入门级摄影</h2>
    <p>真的算一个不到入门级的小白，平常看到好看的景色就喜欢拿着手机或者相机拍下来.<br>
    <h3 style="color:Dodgerblue;">-云-</h3>
       每个好看的风景都是老天赏脸（嘻嘻）。大部分的拍摄地点要么在公交车上，要么在去车站的路上。<br>
@@ -211,17 +225,18 @@
     <img src="照片\杂15.jpg" height="312" width="312"><br>
     <img src="照片\杂16.jpg" height="312" width="312"><br>
    </p>
-  </h2>
-
+  </div>
   <hr />
-  <h2 align="center" style="color:Darkblue;">星点贡献——我的志愿生涯。</h2>
+
+  <div id="星点贡献——我的志愿生涯">
+  <h2 align="center" style="color:navy;">星点贡献——我的志愿生涯</h2>
    <p>志愿是从高一开始的。社团招新的那会，有个点儿围了一圈人扫二维码，然后我也扫了，就进了那个微信群。<br>
      第一个志愿活动在高一的九月份，是一个宣传急救知识的志愿活动，没什么人报名，我抱着试试看的心情就去了。然后去了就挺尴尬了，就不认识的仨学长和我。
      但是活动本身还是挺好的。先会有专业人士教我们急救，然后我们再向大众传授白金十分钟和急救的知识。 由于地点在宋庆龄青少年文化交流中心，
      周围来来往往的都是上完课外班的小孩子们。挺锻炼自己的传授能力和亲和度的。忙忙叨叨一下午觉得教别人知识蛮自豪！<br>
      <img src="照片\急救1.jpg" alt="传授急救知识" height="320" width="425"><br>
-     <img src="照片\急救2.jpg" alt="传授急救知识" height="320" width="425">
-     <div>后来前前后后做了一些零散的志愿活动，就比如说，和同学去康辉老年公寓唱《当你老了》，去了海伦聋儿康复园教小孩子折纸。做这些活动的间隔，
+     <img src="照片\急救2.jpg" alt="传授急救知识" height="320" width="425"><br>
+       后来前前后后做了一些零散的志愿活动，就比如说，和同学去康辉老年公寓唱《当你老了》，去了海伦聋儿康复园教小孩子折纸。做这些活动的间隔，
        因为我是国际部的要找规划，总有规划问我，你的志愿活动给他们改变了什么，这个问题简单来说，没什么，没改变什么。又或者，改变了一点，一点表层的东西。
        曾经很痛恨自己看到一些很痛心的，很想伸出援手的情况却帮不了什么大忙，并不能从根本上改变这些问题。但后来想了想，改变一点总是改变了，
        比起什么都不做，慢慢的改变总会在有一天呈现出他最大的成效。<br>
@@ -231,8 +246,7 @@
       </video><br>
       <img src="照片\海伦1.jpg" alt="青蛙" height="320" width="320"><br>
       <img src="照片\海伦2.jpg" alt="教折纸" height="320" width="320"><br>
-    </div>
-      <div>到太阳村了，太阳村是重头戏。这是第一次真正意义上的体验生活。我们去太阳村没支教，去搬化肥来着。为啥叫体验生活呢，这个化肥是麻袋装的，
+      到太阳村了，太阳村是重头戏。这是第一次真正意义上的体验生活。我们去太阳村没支教，去搬化肥来着。为啥叫体验生活呢，这个化肥是麻袋装的，
       一卡车拉来的，50公斤的，大概有200袋不到：）真的搬得时候嘴上笑嘻嘻，心里mmp。我这辈子都没搬过这么多这么沉的东西，搬完之后觉得自己不是女的。<br>
       关于太阳村的起源，那就有得说了。有关太阳村起源和妈妈咪呀的宣传。这里的孩子都是服刑人员的子女或者是被拐卖然后救下的孩子。
       太阳村是西安的一名叫张淑琴的女警官创办的，创办的目的就是让这些无辜的孩子有安身之所。北京的这个太阳村经济来源是后面的养殖场，还有草莓地。
@@ -244,7 +258,6 @@
       <img src="照片\太阳村1.jpg" alt="太阳村" height="320" width="425"><br>
       <img src="照片\太阳村2.jpg" alt="太阳村" height="320" width="425"><br>
       <img src="照片\太阳村3.jpg" alt="太阳村" height="320" width="425"><br>
-    </div>
       后面的志愿就很零散啦，去一个网络文学大会做志愿者，扫扫二维码进场馆。站累了还能去逛一逛，也不知道这种混志愿北京时长的志愿活动做了有啥意义。<br>
       最近做的是一个给山区孩子录音读英文绘本的活动，读好了以后放到公众号上。我这么卡卡卡雷厉风行的人，就及其锻炼自己的轻柔能力，可不能把睡前故事读的
       像要上战场。
@@ -252,4 +265,6 @@
        <source src="照片\the nonthreatening ghost.mp3" type="audio/mpeg">
       </audio>
    </p>
+  </div>
+
 </html>
