--- a/index.html
+++ b/index.html
@@ -260,11 +260,20 @@
       <img src="照片\太阳村3.jpg" alt="太阳村" height="320" width="425"><br>
       后面的志愿就很零散啦，去一个网络文学大会做志愿者，扫扫二维码进场馆。站累了还能去逛一逛，也不知道这种混志愿北京时长的志愿活动做了有啥意义。<br>
       最近做的是一个给山区孩子录音读英文绘本的活动，读好了以后放到公众号上。我这么卡卡卡雷厉风行的人，就及其锻炼自己的轻柔能力，可不能把睡前故事读的
-      像要上战场。
+      像要上战场。<br>
       <audio controls>
        <source src="照片\the nonthreatening ghost.mp3" type="audio/mpeg">
       </audio>
    </p>
   </div>
+  <hr />
 
+  <h2 style="color:navy;">写在后面的话</h2>
+   <p style="background-color:rgba(255,255,0,0.25)">如果能读到这里，那说明这位网页的浏览者肯定是一个很有耐心的人了！感谢每一位能读完的可爱人呀！
+     读完了的话，就大概了解表层的我了吧。Acai肯定不如表面的那么好，但不停争取着，想和大家一样
+     成为一个更好的好人。<br>
+     希望大家平安喜乐，万事胜意。<br>
+     那么，就到这里吧，有缘自会相见~
+   </p>
+   <div><textarea>有什么建议都可以写在这里哦~</textarea></div><br>
 </html>
