add a background image

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang= "en">
 <head>
   <meta charset= "utf-8">
+  <link rel="stylesheet" href="style.css">
   <title>acai的个人网站</title>
 </head>
 
@@ -17,6 +18,7 @@
     <img src="照片\自拍.jpg" height="320" width="425"><br>
     <embed src="照片\lolipop.mp3" height="50" width="465">
     <div id="目录">
+      <!--这里可以写<label for="">link section</label>作为link开始了的提示-->
       <a href="#小小动力——我的爱好"><br>
         转到小小动力——我的爱好
       <a href="#记录生活——不到入门级摄影"><br>
@@ -68,6 +70,7 @@
       学了电脑美术，画了一个皮影制作人和皮影对话的场景的作品，还有一些简单的练习。<br>
       <img src="照片\板绘1.jpg" alt="电脑绘画" width="425" height="320"><br>
       <img src="照片\板绘2.jpg" alt="电脑绘画" width="320" height="425"><br>
+      <img src="照片\板绘3.jpg" alt="电脑绘画" width="378" height="282"><br>
       还尝试了一点点国画，虽然不是很擅长，算是个想继续的体验。<br>
       <img src="照片\国画.jpg" alt="白描" width="320" height="425"><br>
       时不时自己画点小画:) 使用马克笔-->原地爆炸<br>
@@ -117,16 +120,19 @@
         <img src="照片\傻猫.jpg" alt="傻猫" height="416" width="312"><br>
         据说这是我的自画像？？？<br>
         <img src="照片\傻狗.jpg" alt="哈士奇，据说是我的自画像" height="416" width="312"><br>
-      比起图案，更喜欢刻字。可能是因为自己的字太丑，所以靠刻出来的字补补。喜欢刻字的感觉，很细致。<br>
-      <img src="照片\福到了.jpg" alt="福" height="312" width="312"><br>
-      <img src="照片\平安喜乐.jpg" alt="平安喜乐" height="416" width="312"><br>
-      <img src="照片\镇魂.jpg" alt="字" height="312" width="416"><br>
-      <img src="照片\bjt.jpg" alt="字" height="312" width="416"><br>
-      <img src="照片\人狠.jpg" alt="字" height="312" width="312">
+        比起图案，更喜欢刻字。可能是因为自己的字太丑，所以靠刻出来的字补补。喜欢刻字的感觉，很细致。<br>
+        <img src="照片\福到了.jpg" alt="福" height="312" width="312"><br>
+        <img src="照片\平安喜乐.jpg" alt="平安喜乐" height="416" width="312"><br>
+        <img src="照片\镇魂.jpg" alt="字" height="312" width="416"><br>
+        <img src="照片\bjt.jpg" alt="字" height="312" width="416"><br>
+        <img src="照片\人狠.jpg" alt="字" height="312" width="312">
       </div>
-      <br>刻橡皮章算是我的最放松的方式。可以放空自己的脑袋，累的时候什么也不想，想不明白事情的时候也可以什么都想。四年攒下来已经有三四盒章子了。
+      刻橡皮章算是我的最放松的方式。可以放空自己的脑袋，累的时候什么也不想，想不明白事情的时候也可以什么都想。四年攒下来已经有三四盒章子了。
       上了高中带了艺术社，时不时的带着社员刻章子。大部分的章子刻完以后会印到卡纸上当做明信片或者书签，还有的会当做贺卡送给老师和同学。<br>
       <img src="照片\圣诞节.jpg" alt="贺卡" height="219" width="288">
+      <img src="照片\书签1.jpg" alt="书签" height="312" width="312">
+      <img src="照片\书签2.jpg" alt="书签" height="312" width="312">
+      <img src="照片\书签3.jpg" alt="书签" height="312" width="312">
     </p>
   </div>
   <hr />
