--- a/index.html
+++ b/index.html
@@ -2,11 +2,53 @@
 <html lang= "en">
 <head>
   <meta charset= "utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <!--bootstrap的CSS样式-->
   <link rel="stylesheet" href="style.css">
+  <!--使用bootstrap的frame时，仍需要添加自己的样式。自己的样式放在后面，能覆盖bootstrap想要修改的样式。-->
   <title>acai的个人网站</title>
 </head>
 
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+
+
+
   <h1 style="font-size:28px; background-color:rgba(255,255,0,0.25);">欢迎来到<br>Acai<br>的空间</h1>
   <h2 align="center" style="color:navy;">Acai的自我介绍</h2>
   <p>我叫蔡依珊。在北京市八一学校国际部就读高二。是一个简(直)简（来）单（直）单（去），不会化妆，（真的）胖胖的女生。
@@ -19,7 +61,7 @@
     <embed src="照片\lolipop.mp3" height="50" width="465">
     <div id="目录">
       <!--这里可以写<label for="">link section</label>作为link开始了的提示-->
-      <a href="#小小动力——我的爱好"><br>
+      <a href="#hobby"><br>
         转到小小动力——我的爱好
       <a href="#记录生活——不到入门级摄影"><br>
         转到记录生活——不到入门级摄影
@@ -30,7 +72,7 @@
   </p>
   <hr />
 
-  <div id="小小动力——我的爱好">
+  <div id="hobby">
   <h2 align="center" style="color:navy;">小小动力——我的爱好</h2>
     <h3 style="color:Dodgerblue;">画画</h3>
     <p>
